--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,22 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+GROUP=com.qpg
+SITE_URL=https://github.com/qiaodashaoye/SuperHttp
+GIT_URL=https://github.com/qiaodashaoye/SuperHttp.git
+
+PACKAGING=aar
+DESCRIBE=This is a lightweight HttpRequest framework
+
+LICENSE_NAME=The Apache Software License, Version 2.0
+LICENSE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+
+DEVELOPER_ID=SuperHttp
+DEVELOPER_NAME=qpg
+DEVELOPER_EMAIL=1451449315@qq.com
+
+USERORG=qpglibs
+PROJECT_REPO=maven
+PROJECT_NAME=SuperHttp
+PROJECT_PUBLISH=true
