--- a/gradle.properties
+++ b/gradle.properties
@@ -34,3 +34,5 @@ USERORG=qpglibs
 PROJECT_REPO=maven
 PROJECT_NAME=SuperHttp
 PROJECT_PUBLISH=true
+android.useAndroidX=true
+android.enableJetifier=true
