--- a/gradle.properties
+++ b/gradle.properties
@@ -31,7 +31,7 @@ DEVELOPER_NAME=qpg
 DEVELOPER_EMAIL=1451449315@qq.com
 
 USERORG=q-p-g
-PROJECT_REPO=superhttp
+PROJECT_REPO=maven
 PROJECT_NAME=SuperHttp
 PROJECT_PUBLISH=true
 android.useAndroidX=true
