--- a/superhttp/build.gradle
+++ b/superhttp/build.gradle
@@ -7,7 +7,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0.2"
+        versionName "1.0.3"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -26,13 +26,13 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
-    api 'com.squareup.okhttp3:logging-interceptor:3.7.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
+    api 'com.squareup.okhttp3:logging-interceptor:3.14.2'
     api 'com.squareup.okhttp3:okhttp:3.14.2'
     api 'io.reactivex.rxjava2:rxjava:2.2.9'
     api 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    api 'com.squareup.retrofit2:retrofit:2.5.0'
-    api 'com.squareup.retrofit2:converter-gson:2.5.0'
+    api 'com.squareup.retrofit2:retrofit:2.6.0'
+    api 'com.squareup.retrofit2:converter-gson:2.6.0'
     api 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
 }
 apply from: '../bintray.gradle'
